--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sacha's Portfolio</title>
+    <title>Sacha Mae's Portfolio</title>
     <link rel="stylesheet" href="styles.css" />
     </head>
 <body>
@@ -117,4 +117,5 @@
         © <span id="year">2025</span> Sacha Mae C. Jaban · Built with HTML AND CSS
     </footer>
 </body>
+
 </html>
